--- a/css/css.css
+++ b/css/css.css
@@ -69,12 +69,14 @@ body
 .mainmu
 {
 	position:relative;
+	/* height: 32px; */
 	border-radius:10px;
 	background:url(../icon/menu.fw.png) center no-repeat;
 	background-size:cover;
 	line-height:30px;
 	padding:2px 10px 2px 10px;
 	margin:7px 1px 7px 1px;
+	
 }
 .mainmu:hover
 {
@@ -90,11 +92,18 @@ body
 	line-height:30px;
 	padding:2px 10px 2px 10px;
 	margin:7px 1px 7px 1px;
+	
 }
 .mainmu2:hover
 {
 	background:url(../icon/menu4.fw.png) center no-repeat;
 	background-size:cover;
+}
+.mw{
+	position: absolute;
+	left: 150px;
+	width: 210px;
+	z-index: 99;
 }
 #lf
 {
